# short-iron

./: Cargo.toml
src/: handlers.rs  logging.rs  main.rs
src/handlers/: debugger.rs  redirect.rs  shorten_url.rs
