[package]
name = "short-iron"
version = "0.1.0"
authors = ["Harry Tucker <harrytuckerubuntu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

tracing-actix-web = "0.2"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
tracing-log = "0.1.1"
tracing-bunyan-formatter = "0.1.6"
tracing-futures = "0.2.4"

serde = { version = "1.0", features = ["derive"] }
nanoid = "0.3.0"
url = "2.2.0"

async-std = "1.8.0"
